Changes with version

 *) More python3 fixes: Fixed one itervalues() leftover, use
    inspect.signature() if available, instead of .getargspec().


Changes with version 0.5.3

 *) Type instances were not being inspected properly (leftover from py3
    transition)


Changes with version 0.5.1 + 0.5.2

 *) Various python3 fixes


Changes with version 0.5.0

 *) First alpha release