@@ -26,7 +26,7 @@ r"""
 The module provides all exceptions and warnings used throughout the
 `gensaschema` package.
 """
-if __doc__:
+if __doc__:  # pragma: no branch
     # pylint: disable = redefined-builtin
     __doc__ = __doc__.encode('ascii').decode('unicode_escape')
 __author__ = r"Andr\xe9 Malo".encode('ascii').decode('unicode_escape')
