@@ -1,60 +1,0 @@
-# -*- coding: ascii -*-
-r"""
-:Copyright:
-
- Copyright 2014 - 2016
- Andr\xe9 Malo or his licensors, as applicable
-
-:License:
-
- Licensed under the Apache License, Version 2.0 (the "License");
- you may not use this file except in compliance with the License.
- You may obtain a copy of the License at
-
-     http://www.apache.org/licenses/LICENSE-2.0
-
- Unless required by applicable law or agreed to in writing, software
- distributed under the License is distributed on an "AS IS" BASIS,
- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- See the License for the specific language governing permissions and
- limitations under the License.
-
-================
- Test Utilities
-================
-
-Test utilities.
-"""
-if __doc__:
-    # pylint: disable = redefined-builtin
-    __doc__ = __doc__.encode('ascii').decode('unicode_escape')
-__author__ = r"Andr\xe9 Malo".encode('ascii').decode('unicode_escape')
-__docformat__ = "restructuredtext en"
-
-# pylint: disable = unused-import
-try:
-    from unittest import mock  # noqa
-except ImportError:
-    import mock  # noqa
-
-
-class Bunch(object):
-    """ Bunch object - represent all init kwargs as attributes """
-
-    def __init__(self, **kw):
-        """ Initialization """
-        self.__dict__.update(kw)
-
-
-def uni(value):
-    """
-    Create unicode from raw string with unicode escapes
-
-    :Parameters:
-      `value` : ``str``
-        String, which encodes to ascii and decodes as unicode_escape
-
-    :Return: The decoded string
-    :Rtype: ``unicode``
-    """
-    return value.encode('ascii').decode('unicode_escape')
